--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "13.4.19",
     "openai": "^4.3.1",
     "postcss": "8.4.28",
+    "posthog-js": "^1.77.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
