--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "doppler run -- next dev",
-    "build": "doppler run -- next build",
-    "start": "doppler run -- next start",
+    "build": "next build",
+    "start": "next start",
     "lint": "next lint",
     "lint:fix": "yarn lint --fix",
     "format": "npx prettier --write .",
