--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -24,7 +24,8 @@ jobs:
         with:
           node-version: 18
       - name: Install dependencies
-        run: npm ci
+        # run: npm ci
+        run: yarn install --frozen-lockfile
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
       - name: build
