--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@supabase/auth-ui-react": "^0.4.2",
     "@supabase/supabase-js": "^2.33.1",
     "@tailwindcss/forms": "^0.5.6",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
