--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint",
     "lint:fix": "yarn lint --fix",
     "format": "npx prettier --write .",
-    "test:e2e": "playwright test",
+    "test:e2e": "doppler run -- playwright test",
     "generate-db-types": "npx supabase gen types typescript --project-id \"uvthrievvhksvomqwowg\" --schema public > types/supabase.ts"
   },
   "dependencies": {
