--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -16,6 +16,7 @@ env:
 
 jobs:
   test:
+    name: Playwright Tests
     timeout-minutes: 10
     runs-on: ubuntu-latest
     steps:
@@ -38,3 +39,16 @@ jobs:
           name: playwright-report
           path: playwright-report/
           retention-days: 30
+
+  build_devcontainer:
+    name: Build devcontainer
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Build container
+      run: |
+        docker build -t devcontainer .devcontainer
+      # docker run devcontainer <your-test-command>
+
