--- a/.devcontainer/local/devcontainer.json
+++ b/.devcontainer/local/devcontainer.json
@@ -3,7 +3,8 @@
 {
 	"name": "TalkForm",
 
-	"dockerFile": "../Dockerfile",
+	// NOTE: because codespaces automatically 
+	"dockerFile": "Dockerfile.codespaces",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	// "image": "mcr.microsoft.com/devcontainers/typescript-node:1-18-bullseye",
 
