--- a/.devcontainer/codespaces/devcontainer.json
+++ b/.devcontainer/codespaces/devcontainer.json
@@ -4,7 +4,7 @@
 	"name": "TalkForm",
 
 	// NOTE: because codespaces automatically 
-	"dockerFile": "Dockerfile.codespaces",
+	"dockerFile": "../../Dockerfile.codespaces",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	// "image": "mcr.microsoft.com/devcontainers/typescript-node:1-18-bullseye",
 
@@ -41,8 +41,9 @@
 		}
 	},
 
-	// TODO can't get the yarn install within Dockerfile to show up in dev container
-	// "postCreateCommand": "yarn install --frozen-lockfile",
+	// TODO can't get the yarn install within Dockerfile to show up in dev container.
+	// This also seems to be what the Microsoft example devcontainers do.
+	"postCreateCommand": "yarn install --frozen-lockfile",
 
 	// Configure tool-specific properties.
 	"customizations": {
