--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,27 +14,24 @@
 	"containerEnv": {
 		"DOPPLER_TOKEN": "${localEnv:DOPPLER_CLI_TOKEN}"
 	},
-
-	// "features": {
-	// 	"ghcr.io/devcontainers-contrib/features/supabase-cli:1": {}
-	// },
-
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
-
+		
 	// "settings": {
 	// 		"terminal.integrated.shell.linux": "/bin/bash"
 	// },
-
-
+	
+	
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	"forwardPorts": [
 		3000
 	],
+		
+	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
-		"ghcr.io/devcontainers/features/git:1": {}
+		"ghcr.io/devcontainers/features/git:1": {},
+		"ghcr.io/BitBuilder-ai/devcontainer/hello:1.0.2": {},
+		"ghcr.io/bitbuilder-ai/devcontainer/cli:0": {}
 	},
-
+		
 	"portsAttributes": {
 		"3000": {
 			"label": "website"
