--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,19 +28,24 @@
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
 		"ghcr.io/devcontainers/features/git:1": {},
-		"ghcr.io/BitBuilder-ai/devcontainer/hello:1.0.2": {},
-		"ghcr.io/bitbuilder-ai/devcontainer/cli:0": {}
+		"ghcr.io/BitBuilder-ai/devcontainer/cli:1": {
+			"version": "0.1.5"
+		}
 	},
 		
 	"portsAttributes": {
 		"3000": {
 			"label": "website"
+		},
+		"65455": {
+			"label": "BitBuilder Code Generation"
 		}
 	},
 
 	// TODO can't get the yarn install within Dockerfile to show up in dev container.
 	// This also seems to be what the Microsoft example devcontainers do.
 	"postCreateCommand": "yarn install --frozen-lockfile",
+	"postStartCommand": "bb listener start $CODESPACE_VSCODE_FOLDER",
 
 	// Configure tool-specific properties.
 	"customizations": {
