--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,7 +28,7 @@
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
 		"ghcr.io/devcontainers/features/git:1": {},
-		"ghcr.io/BitBuilder-ai/devcontainer/cli:0.0.3": {}
+		"ghcr.io/BitBuilder-ai/devcontainer/cli:0.0.4": {}
 	},
 		
 	"portsAttributes": {
@@ -43,7 +43,7 @@
 	// TODO can't get the yarn install within Dockerfile to show up in dev container.
 	// This also seems to be what the Microsoft example devcontainers do.
 	"postCreateCommand": "yarn install --frozen-lockfile",
-	"postStartCommand": "bb listener start $CODESPACE_VSCODE_FOLDER",
+	"postStartCommand": "bb listener start /workspace/TalkFormAI",
 
 	// Configure tool-specific properties.
 	"customizations": {
