--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,8 +22,7 @@
 	
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	"forwardPorts": [
-		3000,
-		65455
+		3000
 	],
 		
 	// Features to add to the dev container. More info: https://containers.dev/features.
@@ -37,7 +36,7 @@
 			"label": "website"
 		},
 		"65455": {
-			"label": "BitBuilder Code Generation",
+			"label": "BitBuilder",
 			"visibility": "public",
 			"onAutoForward": "silent"
 		}
