--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,36 +14,39 @@
 	"containerEnv": {
 		"DOPPLER_TOKEN": "${localEnv:DOPPLER_CLI_TOKEN}"
 	},
-
-	// "features": {
-	// 	"ghcr.io/devcontainers-contrib/features/supabase-cli:1": {}
-	// },
-
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
-
+		
 	// "settings": {
 	// 		"terminal.integrated.shell.linux": "/bin/bash"
 	// },
-
-
+	
+	
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	"forwardPorts": [
-		3000
+		3000,
+		65455
 	],
+		
+	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
-		"ghcr.io/devcontainers/features/git:1": {}
+		"ghcr.io/devcontainers/features/git:1": {},
+		"ghcr.io/BitBuilder-ai/devcontainer/cli:0.0.5": {}
 	},
-
+		
 	"portsAttributes": {
 		"3000": {
 			"label": "website"
+		},
+		"65455:65455": {
+			"label": "BitBuilder",
+			"onAutoForward": "silent",
+			"requireLocalPort": true
 		}
 	},
 
 	// TODO can't get the yarn install within Dockerfile to show up in dev container.
 	// This also seems to be what the Microsoft example devcontainers do.
 	"postCreateCommand": "yarn install --frozen-lockfile",
+	"postAttachCommand": "bb listener start .",
 
 	// Configure tool-specific properties.
 	"customizations": {
