--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -39,6 +39,7 @@
 		"65455:65455": {
 			"label": "BitBuilder",
 			"onAutoForward": "silent",
+			"visability": "public",
 			"requireLocalPort": true
 		}
 	},
