--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -29,7 +29,8 @@
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
 		"ghcr.io/devcontainers/features/git:1": {},
-		"ghcr.io/BitBuilder-ai/devcontainer/cli:0.0.5": {}
+		"ghcr.io/BitBuilder-ai/devcontainer/cli:0.0.5": {},
+		"ghcr.io/devcontainers/features/github-cli:1": {}
 	},
 		
 	"portsAttributes": {
