--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -48,8 +48,8 @@
 	},
 	// TODO can't get the yarn install within Dockerfile to show up in dev container.
 	// This also seems to be what the Microsoft example devcontainers do.
-	"postCreateCommand": "yarn install --frozen-lockfile && bb listener start .",
-	"waitFor": "postCreateCommand",
+	"postCreateCommand": "yarn install --frozen-lockfile",
+	"postStartCommand": "bb listener start .",
 
 	// Configure tool-specific properties.
 	"customizations": {
