--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,7 +18,7 @@
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
 		"ghcr.io/devcontainers/features/git:1": {},
-		"ghcr.io/BitBuilder-ai/devcontainer/cli:0.1.16": {} // This adds the BitBuilder CLI
+		"ghcr.io/BitBuilder-ai/devcontainer/cli:0.1.17": {} // This adds the BitBuilder CLI
 	},
 		
 	"portsAttributes": {
@@ -40,7 +40,7 @@
 	// TODO can't get the yarn install within Dockerfile to show up in dev container.
 	// This also seems to be what the Microsoft example devcontainers do.
 	"postCreateCommand": "yarn install --frozen-lockfile",
-	"postStartCommand": "bb listener start . >> ~/post-start.log",
+	"postStartCommand": "bb listener start .",
 
 	// Configure tool-specific properties.
 	"customizations": {
