--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,29 +9,29 @@
 		"DOPPLER_TOKEN": "${localEnv:DOPPLER_CLI_TOKEN}"
 	},
 
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	"forwardPorts": [
-		3000,
-		65455
-	],
 		
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
 		"ghcr.io/devcontainers/features/git:1": {},
-		"ghcr.io/BitBuilder-ai/devcontainer/cli:0.17.2": {} // This adds the BitBuilder CLI
+		"ghcr.io/BitBuilder-ai/devcontainer/cli:0.17.3": {} // This adds the BitBuilder CLI
 	},
-		
+
+	// Use 'forwardPorts' to make a list of ports inside the container available locally.
+	"forwardPorts": [
+		3000,
+		65455 // Required for BitBuilder
+	],		
 	"portsAttributes": {
 		"3000": {
 			"label": "website"
 		},
-		"65455": { // This opens a port, allowing BitBuilder to make code changes in this Codespace when prompted.
+		"65455": { // This opens a port, allowing the CLI to contact the BitBuilder API
 			"label": "BitBuilder",
 			"onAutoForward": "silent",
 			"requireLocalPort": true
 		}
 	},
-	"postStartCommand": "nohup bash -c 'bb listener start . &'",
+	"postStartCommand": "nohup bash -c 'bb listener start . &'", // This allows BitBuilder to write file changes in the codespace.
 
 	"remoteEnv": {
 		// Present because this repository is for internal testing.
