--- a/ellipsis.yaml
+++ b/ellipsis.yaml
@@ -1,9 +1,10 @@
 version: 1.1
 
-- name: "build"
-  description: "Make sure everything still works."
-  command: "yarn build"
-  return_output_on_success: false
+commands: 
+  - name: "build"
+    description: "Make sure everything still works."
+    command: "yarn build"
+    return_output_on_success: false
 
 pr_review:
   user_overrides:
