--- a/ellipsis.yaml
+++ b/ellipsis.yaml
@@ -1,5 +1,7 @@
 version: 1.1
 
+workspace_type: "github_codespaces"
+
 commands: 
   - name: "build"
     description: "Make sure everything still works."
