--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,33 +9,33 @@
 		"DOPPLER_TOKEN": "${localEnv:DOPPLER_CLI_TOKEN}"
 	},
 
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	"forwardPorts": [
-		3000,
-		65455
-	],
 		
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
 		"ghcr.io/devcontainers/features/git:1": {},
-		"ghcr.io/BitBuilder-ai/devcontainer/cli:0.17.2": {} // This adds the BitBuilder CLI
+		"ghcr.io/ellipsis-dev/devcontainer/cli:0.2.0": {} // This adds the Ellipsis CLI
 	},
-		
+
+	// Use 'forwardPorts' to make a list of ports inside the container available locally.
+	"forwardPorts": [
+		3000,
+		65455 // Required for Ellipsis
+	],		
 	"portsAttributes": {
 		"3000": {
 			"label": "website"
 		},
-		"65455": { // This opens a port, allowing BitBuilder to make code changes in this Codespace when prompted.
-			"label": "BitBuilder",
+		"65455": { // This opens a port, allowing the CLI to contact the Ellipsis API
+			"label": "Ellipsis",
 			"onAutoForward": "silent",
 			"requireLocalPort": true
 		}
 	},
-	"postStartCommand": "nohup bash -c 'bb listener start . &'",
+	"postStartCommand": "nohup bash -c 'bb listener start . &'", // This allows Ellipsis to write file changes in the codespace.
 
 	"remoteEnv": {
 		// Present because this repository is for internal testing.
-		"BITBUILDER_API_URL": "https://bitbuilder-beta.up.railway.app"
+		"ELLIPSIS_API_URL": "https://bitbuilder-beta.up.railway.app"
 	},
 	
 	// TODO can't get the yarn install within Dockerfile to show up in dev container.
