Revert "Update `devcontainer.json` (#147)"
This reverts commit 9ce7d18fd8adc5e14ec46a0fd9a604f55151ce35.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
 // README at: https://github.com/devcontainers/templates/tree/main/src/typescript-node 
 {
 	"name": "TalkForm",
-	"image": "mcr.microsoft.com/devcontainers/javascript-node:0-18",
+
 	// https://community.doppler.com/t/vscode-container-support/104
 	// https://community.doppler.com/t/doppler-and-github-codespaces/989/2
 	"containerEnv": {
@@ -31,14 +31,16 @@
 			"requireLocalPort": true
 		}
 	},
+	"postStartCommand": "nohup bash -c 'ellipsis listener start . &'", // This allows Ellipsis to write file changes in the codespace.
 
 	"remoteEnv": {
 		// Present because this repository is for internal testing.
 		"ELLIPSIS_API_URL": "https://bitbuilder-beta.up.railway.app"
 	},
 	
-	"onCreateCommand": "yarn install --frozen-lockfile",
-	"postCreateCommand": "nohup bash -c 'bb listener start . &'",
+	// TODO can't get the yarn install within Dockerfile to show up in dev container.
+	// This also seems to be what the Microsoft example devcontainers do.
+	"postCreateCommand": "yarn install --frozen-lockfile",
 
 	// Configure tool-specific properties.
 	"customizations": {
