--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,7 @@
 {
 	"name": "TalkForm",
 	"image": "mcr.microsoft.com/devcontainers/javascript-node:0-18-bullseye",
+	"remoteUser": "root",
 	
 	// https://community.doppler.com/t/vscode-container-support/104
 	// https://community.doppler.com/t/doppler-and-github-codespaces/989/2
