add doppler feature

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,8 @@
 	"features": {
 		"ghcr.io/devcontainers/features/git:1": {},
 		"ghcr.io/devcontainers/features/github-cli:1": {},
-		"ghcr.io/ellipsis-dev/devcontainer/cli:0.2.7": {}
+		"ghcr.io/ellipsis-dev/devcontainer/cli:0.2.7": {},
+		"ghcr.io/metcalfc/devcontainer-features/doppler:0.1.1": {}
 	},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
