--- a/ellipsis.yaml
+++ b/ellipsis.yaml
@@ -4,10 +4,11 @@ workspace_type: "internal_ec2"
 
 commands: 
   - name: "build"
-    description: "Make sure everything still works."
+    description: "Make sure everything still works. Fix only errors, ignore warnings."
     command: "yarn build-doppler"
     return_output_on_success: false
     auto_repair: true
+    
   - name: "lint_fix"
     description: "Lints the code in fix mode, which will fix some errors."
     command: "yarn lint:fix"
