--- a/ellipsis.yaml
+++ b/ellipsis.yaml
@@ -11,7 +11,7 @@ commands:
     
   - name: "lint_fix"
     description: "Lints the code in fix mode, which will fix some errors."
-    command: "yarn lint:fix"
+    command: "yarn lint:fix && yarn format"
     return_output_on_success: false
     auto_repair: true
 
