--- a/.devcontainer/local/deprecated-devcontainer.json
+++ b/.devcontainer/local/deprecated-devcontainer.json
@@ -1,65 +1,61 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/typescript-node
 {
-	"name": "TalkForm",
+  "name": "TalkForm",
 
-	// NOTE: because codespaces automatically 
-	"dockerFile": "../../Dockerfile.full",
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	// "image": "mcr.microsoft.com/devcontainers/typescript-node:1-18-bullseye",
+  // NOTE: because codespaces automatically
+  "dockerFile": "../../Dockerfile.full",
+  // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+  // "image": "mcr.microsoft.com/devcontainers/typescript-node:1-18-bullseye",
 
+  // https://community.doppler.com/t/vscode-container-support/104
+  // https://community.doppler.com/t/doppler-and-github-codespaces/989/2
+  "containerEnv": {
+    "DOPPLER_TOKEN": "${localEnv:DOPPLER_CLI_TOKEN}"
+  },
 
-	// https://community.doppler.com/t/vscode-container-support/104
-	// https://community.doppler.com/t/doppler-and-github-codespaces/989/2
-	"containerEnv": {
-		"DOPPLER_TOKEN": "${localEnv:DOPPLER_CLI_TOKEN}"
-	},
+  // "features": {
+  // 	"ghcr.io/devcontainers-contrib/features/supabase-cli:1": {}
+  // },
 
-	// "features": {
-	// 	"ghcr.io/devcontainers-contrib/features/supabase-cli:1": {}
-	// },
+  // Features to add to the dev container. More info: https://containers.dev/features.
+  // "features": {},
 
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
+  // "settings": {
+  // 		"terminal.integrated.shell.linux": "/bin/bash"
+  // },
 
-	// "settings": {
-	// 		"terminal.integrated.shell.linux": "/bin/bash"
-	// },
+  // Use 'forwardPorts' to make a list of ports inside the container available locally.
+  "forwardPorts": [3000],
+  "features": {
+    "ghcr.io/devcontainers/features/git:1": {}
+  },
 
+  "portsAttributes": {
+    "3000": {
+      "label": "website"
+    }
+  },
 
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	"forwardPorts": [
-		3000
-	],
-	"features": {
-		"ghcr.io/devcontainers/features/git:1": {}
-	},
+  // TODO can't get the yarn install within Dockerfile to show up in dev container
+  "postCreateCommand": "yarn install --frozen-lockfile",
 
-	"portsAttributes": {
-		"3000": {
-			"label": "website"
-		}
-	},
+  // Configure tool-specific properties.
+  "customizations": {
+    "vscode": {
+      "settings": {},
+      "extensions": [
+        "dbaeumer.vscode-eslint",
+        "eamodio.gitlens",
+        "esbenp.prettier-vscode",
+        "GitHub.copilot",
+        "k--kato.intellij-idea-keybindings",
+        "Orta.vscode-jest",
+        "ms-azuretools.vscode-docker"
+      ]
+    }
+  }
 
-	// TODO can't get the yarn install within Dockerfile to show up in dev container
-	"postCreateCommand": "yarn install --frozen-lockfile",
-
-	// Configure tool-specific properties.
-	"customizations": {
-		"vscode": {
-			"settings": {},
-			"extensions": [
-				"dbaeumer.vscode-eslint",
-				"eamodio.gitlens",
-				"esbenp.prettier-vscode",
-				"GitHub.copilot",
-				"k--kato.intellij-idea-keybindings",
-				"Orta.vscode-jest",
-				"ms-azuretools.vscode-docker"
-			]
-		}
-	}
-
-	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
+  // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
+  // "remoteUser": "root"
 }
