--- a/ellipsis.yaml
+++ b/ellipsis.yaml
@@ -1,17 +1,17 @@
 version: 1.1
 
-workspace_type: "internal_ec2"
+workspace_type: 'internal_ec2'
 
-commands: 
-  - name: "build"
-    description: "Make sure everything still works. Fix only errors, ignore warnings."
-    command: "yarn build-doppler"
+commands:
+  - name: 'build'
+    description: 'Make sure everything still works. Fix only errors, ignore warnings.'
+    command: 'yarn build-doppler'
     return_output_on_success: false
     auto_repair: true
-    
-  - name: "lint_fix"
-    description: "Lints the code in fix mode, which will fix some errors."
-    command: "yarn lint:fix && yarn format"
+
+  - name: 'lint_fix'
+    description: 'Lints the code in fix mode, which will fix some errors.'
+    command: 'yarn lint:fix && yarn format'
     return_output_on_success: false
     auto_repair: true
 
@@ -19,5 +19,5 @@ pr_review:
   auto_review_enabled: true
   auto_summarize_pr: true
   user_overrides:
-    - usernames: ["hbrooks"]
+    - usernames: ['hbrooks']
       auto_review_enabled: false
